report data to Eliona
